tests/snapshots/test_query_input_errors__invalid_inputs-2.snap
---
source: tests/test_query_input_errors.rs
expression: mismatch_err.to_string()
---
(table: test) The input's value type for 'id' must be something like Integer(0), but received Text("abc")
