tests/snapshots/test_query_input_errors__invalid_inputs-3.snap
---
source: tests/test_query_input_errors.rs
expression: mismatch_blob_err.to_string()
---
(table: test) The input's value type for 'name' must be something like Text(""), but received Blob([116, 101, 115, 116])
