tests/snapshots/test_query_input_errors__query_input_errors.snap
---
source: tests/test_query_input_errors.rs
expression: no_where_clause_err.to_string()
---
The where clause cannot be an empty string, if you don't want to use a where clause, specify where_input as None
