tests/snapshots/test_query_input_errors__write_op_query_errors-2.snap
---
source: tests/test_query_input_errors.rs
expression: delete_error.to_string()
---
The where clause cannot be an empty string, if you don't want to use a where clause, specify where_input as None
